--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     cursor: move;
     pointer-events: auto;
 
-    background-color: #3c3c3c; /*#0f0f0f*/
+    background-color: #303030; /*#0f0f0f*/
     background-size: min(4vw, 4vh) min(4vw, 4vh);
     background-position: center;
     
@@ -103,24 +103,42 @@ header {
 /* Date */
 .date {
     position: fixed;
-    top: min(1.5vw, 1.5vh);
     z-index: 109001;
+    width: 100vw;
+    top: min(1.5vw, 1.5vh);
     left: min(1.5vw, 1.5vh);
     text-align: left;
     user-select: none;
     margin: 0;
     padding: 0;
     line-height: 0.9;
+    display: flex;
+    backdrop-filter: blur(10px);
 }
 .year {
     font-size: min(10vw, 10vh);
     font-weight: bold;
     color: #e6e6e6;
 }
+.date-location {
+    display:flex;
+    flex-direction: column;
+    margin-left: min(2vw, 2vh);
+}
 .month {
     font-size: min(5vw, 5vh);
     font-weight: bold;
     color: #e6e6e6;
+    margin-top: min(0.5vw, 0.5vh);
+    
+    
+}
+.location {
+    font-size: min(3vw, 3vh);
+    font-weight: bold;
+    color: #4d4d4d;
+    margin-top: min(0.75vw, 0.75vh);
+    
 }
 
 .scrollBar {
@@ -132,23 +150,19 @@ header {
 nav{
     position: fixed;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    left: 50%;
-    transform: translateX(-50%);
     bottom: 0;
-    height: 10vh;
     width: 100vw;
     pointer-events: auto;
+    margin: 0;
+    padding: 0;
+    backdrop-filter: blur(10px);
+
 }
 
 .pill-box {
     display: flex;
-    position:fixed;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-end;
     list-style: none;
-    width: 50vw;
     padding: 0;
     margin: 0;
     z-index:120000;
@@ -156,33 +170,30 @@ nav{
 }
 
 .pill {
-    color: #e6e6e6;
-    background-color: rgba(255, 255, 255, 0);
-    font-size: min(2.18vw, 2.18vh);
+    color: #4d4d4d;
+    background-color: rgba(0, 0, 0, 0);
+    font-size: min(5vw, 5vh);
     font-weight: bold;
     font-family: Helvetica, sans-serif;
     cursor: pointer;
     
-    padding: min(1.08vw, 1.08vh) min(2.18vw, 2.18vh);
-    border-width: min(0.25vw, 0.25vh);
-    border-style: solid;
-    border-color: rgba(87, 87, 87, 0);
-    border-radius: 9999px;
-    transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out, border 0.3s ease-in-out, color 0.3s ease;
+    filter: blur(1px);
+    
+    padding-left: min(1.15vw, 1.15vh);
+    padding-right: min(1.5vw, 1.5vh);
+    transition: background-color 0.3s ease-in-out, filter 0.3s ease, color 0.3s ease;
 }
 
 .pill:hover {
     background-color: rgba(87, 87, 87, 0);
-    transform: scale(0.93);
-    border-color: rgba(87, 87, 87, 0.8);
     color: white;
+    filter: blur(0);
 }
 
 .pill-box li {
-    margin: 0 min(1.2vw, 1.2vh);
     outline: none;
     user-select: none;
-    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: transparent; /*Quitar cuadrado azul*/
     touch-action: manipulation;
 }
 
@@ -213,7 +224,7 @@ nav{
     border-width: 0vh 0vw 0vh 0vw;
     border-style: solid;
     border-color: rgba(15, 15, 15, 1);
-    background: radial-gradient(rgba(39, 39, 39, 0) 0%, rgba(39, 39, 39, 0.95) 70%);
+    background: radial-gradient(rgba(26, 26, 26, 0) 0%, rgba(26, 26, 26, 1) 70%);
     pointer-events: none;
     z-index: 1000;
     animation: zoomGrid 2s forwards 2.5s;
@@ -266,11 +277,13 @@ nav{
     position: relative;
     width: min(20vw, 20vh);
     height: min(20vw, 20vh);
-    background-color: rgba(30, 30, 30, 1);
+    background-color: rgba(30, 30, 30, 0.9);
     border-radius: min(4vw, 4vh);
     pointer-events: auto;
     transition: transform 0.1s ease-in-out;
     z-index: 50;
+    
+    
 }
 
 
